package com.aurapay.domain.model;

public enum PixStatus {
    PENDING,
    APPROVED,
    REJECTED,
    CANCELLED,
    EXPIRED
}