package com.aurapay.domain.model;

public enum TransactionDirection {
    CREDIT, // entrou dinheiro na carteira
    DEBIT   // saiu dinheiro da carteira
}
