package com.aurapay.domain.model;

public enum WalletStatus {
    ACTIVE,
    BLOCKED
}
