package com.aurapay.domain.model.piggybank;

public enum PiggyBankStatus {
    ACTIVE,
    CLOSED
}

