package com.aurapay.domain.model.piggybank;

public enum TransactionType {
    DEPOSIT_COFRINHO, // Representa um depósito realizado no cofrinho
    WITHDRAW_COFRINHO // Representa uma retirada realizada no cofrinho
}
